# duckietown_project

./: .gitignore  Dockerfile  README.md  auto_control.py  docker-compose.yml  generated.yaml  map_gen.py  pyproject.toml  run_automated.py  util.py
duckietown_project/: __main__.py  auto_control.py  const.py  map_gen.py  run_automated.py  util.py
